--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,7 @@ $theme-colors: (primary: $primary);
 $fa-font-path : "../fonts/fontawesome";
 
 @import "../plugins/bootstrap4/scss/bootstrap";
+@import "../plugins/remixicon/fonts/remixicon.css";
 @import "fs";
 
 @font-face {
@@ -61,6 +62,82 @@ label {
     clear: both;
 }
 
+.share-modal {
+    max-width: 95%;
+    position: fixed;
+    bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: $white;
+    border-radius: 8px;
+    padding: 15px 15px 0 15px;
+    z-index: 2004;
+
+    .share-title {
+        margin: 0 0 15px 0;
+        padding: 0 0 15px 0;
+        font-size: 14px;
+        font-family: $poppins-semibold;
+    }
+
+    .share-menu {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+
+        .share-menu-item {
+            display: block;
+            float: left;
+            text-decoration: none;
+            text-align: center;
+            margin: 0 10px 10px 10px;
+            color: $white;
+            height: 40px;
+            width: 40px;
+            line-height: 40px;
+            border-radius: 50%;
+            font-size: 21px;
+
+            &.clipboard {
+                background-color: $gray-500;
+            }
+
+            &.whatsapp {
+                background-color: #25D366;
+            }
+
+            &.instagram {
+                background-color: #dd4f4f;
+            }
+
+            &.twitter {
+                background-color: #00ACEE;
+            }
+
+            &.facebook {
+                background-color: #3B5998;
+            }
+
+            &.line {
+                background-color: #009B3A;
+            }
+        }
+    }
+}
+
+.close-share-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    right: 0;
+    // display: none;
+    background-color: rgba(0, 0, 0, .2);
+    z-index: 2003;
+}
+
 .sidebar {
     height: 100%;
     width: 280px;
@@ -83,6 +160,7 @@ label {
 
         .logo {
             float: left;
+            font-family: $poppins-semibold;
         }
 
         .close-sidebar-toggle {
@@ -126,7 +204,7 @@ label {
         padding: 0 15px;
         margin: 0;
         list-style: none;
-        height: calc(100% - 65px - 153px - 29px);
+        height: calc(100% - 65px - 153px - 27px);
         overflow-y: scroll;
 
         &::-webkit-scrollbar {
@@ -138,7 +216,7 @@ label {
         }
 
         &::-webkit-scrollbar-thumb {
-            background: #dddddd;
+            background: rgba($color: $primary, $alpha: .5);
         }
 
         li a {
@@ -165,8 +243,8 @@ label {
         bottom: 0;
         left: 0;
         text-align: center;
-        font-size: 12px;
-        padding: 5px;
+        font-size: 11px;
+        padding: 5px 0;
     }
 }
 
@@ -174,7 +252,7 @@ label {
     position: fixed;
     top: 0;
     left: 0;
-    bottom: 0;
+    height: 100%;
     right: 0;
     display: none;
     background-color: rgba(0, 0, 0, .2);
